TOBAGO-1404: Improve accessKey TOBAGO-1389 Disable Hotkey-Behaviour (autodetect accessKey from label)